--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -18,6 +19,14 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_recordAudio_play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Button"
+            tools:text="Play" />
 
         <ImageButton
             android:id="@+id/btn_recordAudio_pause"
