--- a/app/src/main/res/layout/fragment_enter_text.xml
+++ b/app/src/main/res/layout/fragment_enter_text.xml
@@ -146,7 +146,9 @@
                 android:id="@+id/editor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp" />
+                android:layout_margin="20dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
         </ScrollView>
     </LinearLayout>
 
