--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -14,7 +14,7 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"   >
 
         <!--ACHTERGROND-->
         <ImageView
@@ -28,7 +28,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#00000000">
+            android:background="#00000000"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <!--Every button is set by using two intersecting guidelines.
                 The top left corner of the button is located at the intersection.
