--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -81,27 +81,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/label_event_details_event_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:labelFor="@id/txt_event_details_title"
-                android:text="@string/event_details_label_title"
-                app:layout_constraintBottom_toTopOf="@id/event_details_upperDivider"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/label_event_details_title" />
-
             <EditText
                 android:id="@+id/txt_event_details_title"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:inputType="text"
                 android:text="@={eventViewModel.eventTitle}"
                 app:layout_constraintBaseline_toBaselineOf="@id/label_event_details_title"
                 app:layout_constraintStart_toEndOf="@id/label_event_details_title"
-                tools:text="Titel van de gebeurtenis" />
+                tools:text="Titel van de gebeurtenis"
+                android:hint="Titel van de gebeurtenis"
+                />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/event_details_upperDivider"
