--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -26,10 +26,11 @@
 
         <ImageButton
             android:id="@+id/btn_event_send"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:minWidth="24dp"
-            android:src="@drawable/event_details_send"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:src="@drawable/btn_send"
             android:onClick="@{() -> editdetailViewModel.onSendButtonClicked()}"
             app:layout_constraintEnd_toStartOf="@+id/image_editDetail_avatar"
             app:layout_constraintTop_toTopOf="parent" />
@@ -39,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
             android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
