--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/draw_emotion"
-            android:contentDescription="@string/frag_main_descr_city_plan" />
+            android:contentDescription="@string/tekenen" />
 
         <!-- KNOPPEN -->
         <!-- Invisible to make it transparent -->
