--- a/app/src/main/res/layout/panel_drawing_tools.xml
+++ b/app/src/main/res/layout/panel_drawing_tools.xml
@@ -23,8 +23,8 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="85"
+            android:layout_height="0dp"
+            android:layout_weight="75"
             app:cardCornerRadius="10dp"
             android:layout_marginBottom="8dp">
 
@@ -112,8 +112,8 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="15"
+            android:layout_height="0dp"
+            android:layout_weight="25"
             app:cardCornerRadius="10dp">
 
             <LinearLayout
@@ -158,7 +158,6 @@
                     android:layout_width="90dp"
                     android:layout_height="0dp"
                     android:layout_gravity="left"
-                    android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:background="@{drawViewModel.selectedLineWidth==LineWidth.THICK ? @drawable/background: @drawable/background_noborder}"
