--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -17,9 +16,9 @@
         android:orientation="vertical">
         <!--ACHTERGROND-->
         <ImageView
+            android:id="@+id/background_city_screen"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/citymap_faith"
             android:contentDescription="@string/frag_main_descr_city_plan" />
 
         <!-- KNOPPEN -->
@@ -111,7 +110,6 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 android:contentDescription="@string/frag_main_descr_your_avatar"
-                android:src="@drawable/meisje_stoer"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
