--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -16,9 +16,9 @@
 
         <!--ACHTERGROND-->
         <ImageView
+            android:id="@+id/background_event_details"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/park_faith"
             android:contentDescription="@string/descr_city_park" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
