--- a/app/src/main/res/layout/fragment_register_avatar.xml
+++ b/app/src/main/res/layout/fragment_register_avatar.xml
@@ -24,9 +24,9 @@
 
         <!--ACHTERGROND-->
         <ImageView
+            android:id="@+id/background_register_avatar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/register_background_avatar" />
+            android:layout_height="match_parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -89,8 +89,8 @@
             <View
                 android:id="@+id/btn_register_finishRegistration"
                 android:layout_width="0dp"
-                android:onClick="@{() -> registerUserViewModel.onFinishRegistrationClicked()}"
                 android:layout_height="0dp"
+                android:onClick="@{() -> registerUserViewModel.onFinishRegistrationClicked()}"
                 app:layout_constraintBottom_toTopOf="@+id/guide_city_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/guide_city_end"
                 app:layout_constraintStart_toStartOf="@+id/guide_city_start"
